--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
 deploy.ant.properties.file=C:\\Users\\Matheus\\AppData\\Roaming\\NetBeans\\8.0.1\\tomcat80.properties
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.9
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.9:base=apache-tomcat-8.0.9.0_base
-user.properties.file=C:\\Users\\Matheus\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
